<resources>
    <string name="app_name">JoKenPo Expansion</string>
    <string name="play_classic">Modo Clássico</string>
    <string name="play_expansion">Modo Expansão</string>
    <string name="rules">Regras</string>
    <string name="win">Vitórias</string>
    <string name="loss">Derrotas</string>
    <string name="classic_mode">Modo Clássico</string>
    <string name="expansion_mode">Modo Expansão</string>
    <string name="credits">Créditos</string>
    <string name="adversary">Oponente</string>
    <string name="player">Jogador</string>
    <string name="user_name">Digite seu nome (opcional)</string>
    <string name="choise">Escolha uma das opções abaixo</string>


</resources>
